--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,8 @@
-:root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
- 
+@import "tailwindcss";
 
-  color-scheme: light dark;
+body {
+
 
   background-color: #242424;
 }
 
-.box{
-  height: 200px;
-  width: 200px;
-  background-color: crimson;
-  border: 3px solid #ffffff;
-  text-align: center;
-  line-height: 200px;
-  color: #ffffff;
-  font-size: 24px;
-}
-.circle{
-  /* width: 100,
-    height: 100,
-    backgroundColor: "#dd00ee",
-    borderRadius: "50%", */
-    width: 100px;
-    height: 100px;
-    background-color: #dd00ee;
-    border-radius: 50%;
-    text-align: center;
-    line-height: 100px;
-    color: #ffffff;
-}
